exercises/gatekeeper/gator/namespace-pss/test-ns-privileged-exempt-success.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: kube-system
  labels:
    pod-security.kubernetes.io/enforce: privileged
spec: {}
