exercises/gatekeeper/gator/namespace-pss/test-ns-privileged-label-failure.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: pss-test
  labels:
    pod-security.kubernetes.io/enforce: privileged
spec: {}
