exercises/gatekeeper/gator/namespace-pss/test-success.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: pss-test
  labels:
    pod-security.kubernetes.io/enforce: restricted
spec: {}
